Capturando Valor do Input

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <title>Refund</title>
   </head>
-
+  <script src="script.js"></script>
   <body>
     <main>
       <img src="./img/logo.svg" alt="Convert logo" class="logo" />
